--- a/css/style.css
+++ b/css/style.css
@@ -3,18 +3,14 @@
     margin:0 auto;
     text-align: center;
 }
-.jst-hours {
-    display:none;
-  }
-  .jst-minutes {
-    float: left;
-  }
-  .jst-seconds {
-    float: left;
-  }
-  .jst-clearDiv {
-    clear: both;
-  }
-  .jst-timeout {
-    color: red;
-  }
+
+button {
+    margin: 4px;
+    cursor: pointer;
+}
+input {
+    text-align: center;
+    width: 40px;
+    margin: 4px;
+    color: salmon;
+}
